Enhance: Instance Tools Batch Operations (#8325)
